<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_age"
        app:showAsAction="never"
        android:title="@string/action_RecognizeAge"/>
    <item
        android:id="@+id/action_gender"
        app:showAsAction="never"
        android:title="@string/action_RecognizeGender"/>

    <item
        android:id="@+id/action_ethnicity"
        app:showAsAction="never"
        android:title="@string/action_RecognizeEthnicity"/>
    <item
        android:id="@+id/action_emotion"
        app:showAsAction="never"
        android:title="@string/action_RecognizeEmotion"/>
    <item
        android:id="@+id/action_comparefaces"
        app:showAsAction="never"
        android:title="@string/action_CompareFaces"/>

</menu>